tests/baselines/reference/jsxFactoryQualifiedNameResolutionError.errors.txt
test.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
test.tsx(9,17): error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?


==== test.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
            return <div />;
                    ~~~
!!! error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?
!!! related TS2728 lib.dom.d.ts:--:--: 'Element' is declared here.
        }
    }